fix: align tooltips, seams

--- a/src/common/styles/ant.less
+++ b/src/common/styles/ant.less
@@ -83,3 +83,21 @@
   max-height: 104px;
   overflow-y: auto;
 }
+
+/* Tooltip */
+.ant-tooltip {
+  word-break: break-all;
+  max-width: 100%;
+}
+&.ant-tooltip-arrow {
+  margin-top: 6px;
+}
+
+.ant-tooltip-inner {
+  margin-top: 6px;
+  max-height: 350px;
+  overflow-y: clip;
+  display: -webkit-box;
+  -webkit-line-clamp: 15;
+  -webkit-box-orient: vertical;
+}
