--- a/src/features/pageObjects/styles/pageObject.less
+++ b/src/features/pageObjects/styles/pageObject.less
@@ -11,22 +11,16 @@
       }
 
       & .ant-tooltip {
-        max-width: calc(100% - 1px);
-        word-break: break-all;
         padding: 5px 14px;
 
         .ant-tooltip-arrow {
-          top: 5px;
+          top: 8px;
           left: 27px;
         }
       }
 
       & .ant-tooltip-inner {
-        max-height: 350px;
-        overflow-y: clip;
-        display: -webkit-box;
-        -webkit-line-clamp: 15;
-        -webkit-box-orient: vertical;
+        margin-top: 8px;
       }
     }
 
